# template_header_only_lib

./: CMakeLists.txt  README.md  vcpkg.json
_github/actions/setup-env/: action.yml
_github/workflows/: header-only-build.yml  header-only-test.yml  publish.yml  release-tag.yml  setup-env.yml
examples/: main.cpp
include/: {{project_name_underscore}}.h
tests/: test_downstream.sh
